--- a/css/style.less
+++ b/css/style.less
@@ -32,7 +32,7 @@ body{overflow:hidden;background:#000}
 #shade .hitW{ width:600/@r;height:300/@r;position:absolute;top:50%;left:50%;margin-top:-300/@r;margin-left:-300/@r;text-align:center;
               overflow:hidden
 }
-#shade .myHit{ font-size:46/@r;opacity:0;filter:alpha(opacity=0);transition:0.5s;z-index:2;position:absolute;width:100%;height:100%}
+#shade .myHit{ font-size:46/@r;opacity:0;filter:alpha(opacity=0);transition:0.5s;z-index:2;position:absolute;width:100%;height:100%; -webkit-transform:transition3d(0,0,0)}
 #shade .myHit p{margin-top:20/@r;color:#feae01}
 #shade .myHit .btn{ margin:50/@r 70/@r;display:inline-block;width:100/@r;height:60/@r;text-align:center;line-height:60/@r}
 #shade .hitw .yes{}
@@ -50,7 +50,8 @@ body{overflow:hidden;background:#000}
              background:rgba(5,46,98,0.2);
              display:none;
              transition:1s;
-             z-index:1
+             z-index:1;
+              -webkit-transform:transition3d(0,0,0)
          }
 
         .sameStyle {
@@ -86,7 +87,7 @@ body{overflow:hidden;background:#000}
 
 
 #shade .loading{position:absolute;width:600/@r;height:40/@r;border-radius:40/@r;background:#ccc;
-                top:50%;left:50%;margin-top:-20/@r;margin-left:-300/@r;display:none
+                top:50%;left:50%;margin-top:-20/@r;margin-left:-300/@r;display:none; -webkit-transform:transition3d(0,0,0)
 }
   #shade .loading .clip {
         position: absolute;
@@ -115,7 +116,7 @@ body{overflow:hidden;background:#000}
 
 .music_list{position:absolute;top:70/@r;left:0;right:0;bottom:130/@r;transition:1s;
             z-index:2;background:url(../images/bg.gif) no-repeat;background-size:cover;
-            transform-origin:left center
+            transform-origin:left center; -webkit-transform:transition3d(0,0,0)
 }
 .music_list ul{ position:absolute;width:100%;}
 .music_list ul li{ height:110/@r;border-bottom:4/@r solid #ccc;text-indent:30/@r;
@@ -156,6 +157,7 @@ footer #btnOff{ display:inline-block;width:60/@r;height:60/@r;border:4/@r solid 
       background-size:cover;
       z-index:1;
       transition:1s;
+       -webkit-transform:transition3d(0,0,0)
   }
  .inner{z-index:2; 
       position:absolute;
@@ -172,7 +174,8 @@ footer #btnOff{ display:inline-block;width:60/@r;height:60/@r;border:4/@r solid 
       background:#000;
       opacity:0.6;
       filter:alpha(opacity=60);
-      z-index:1
+      z-index:1;
+       -webkit-transform:transition3d(0,0,0)
  }
  .face-header{width:100%;
               height:153/@r;
