--- a/css/style.less
+++ b/css/style.less
@@ -183,19 +183,16 @@ footer #btnOff{ display:inline-block;width:60/@r;height:60/@r;border:4/@r solid 
                z-index:2
  }
  .face-header i{
-     line-height:200/@r;
+    
      color:#fff;
      font-size:36/@r;
+    padding:30/@r;
      display:inline-block;
+     float:left;
+      margin:60/@r 0 0 34/@r;
  }
-  .face-header i:nth-of-type(1){
-      float:left;
-       margin-left:34/@r;
-  }
- .face-header i:nth-of-type(2){
-     float:right;
-     margin-right:22/@r
- }
+
+
  .music-msg{
      height:100%;
      display:inline-block;
